# SinFactory

./: .gitignore  H_constants_new.tex  LICENSE  README.md  pyproject.toml  results.csv  setup.py  time_islanded.csv  tox.ini
docs/source/: conf.py  index.rst
examples/: 4_area_test_system.py  example_dynSim.py  example_isolated_area.py  parallell_machines.txt  plot_H_constants.py  plot_time_islanded.py  plot_v_dip.py
sinfactory/: __init__.py  area.py  bus.py  component.py  edge.py  eigenresults.py  generator.py  line.py  load.py  pfactorygrid.py  pfresults.py  unit.py
src/sinfactory/: component.py  line.py  load.py  pfactorygrid.py  pfresults.py  results.py  unit.py
tests/: test_area.py  test_bus.py  test_eigenvalue_calc.py  test_gen.py  test_grid.py  test_grid_sinfactory.pfd  test_line.py  test_pf_results.py
tests/case/: sinfactory.pfd
