[project]
name = "SinFactory"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sigurd Hofsmo Jakobsen", email = "sigurd.jakobsen@sintef.no"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "jupyterlab>=4.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.1",
]
